--- a/MS/index.html
+++ b/MS/index.html
@@ -564,7 +564,7 @@
 
             <ul class="copyright">
                
-               <li><a title="Styleshout" href="https://www.linkedin.com/in/msrisabaranjan/">Designed & Built by Mindan Srisabaranjan</a></li>   
+               <li><a title="Credits" href="https://www.linkedin.com/in/msrisabaranjan/">Designed & Built by Mindan Srisabaranjan</a></li>   
             </ul>
 
          </div>
