--- a/MS/index.html
+++ b/MS/index.html
@@ -367,7 +367,7 @@
 
                <div class="container1">
                   <div class="images">
-                    <img class="resize" src="/images/Capture2323.PNG" alt="Capture2323.PNG"/>
+                    <img class="resize" src="/images/Capture2323.png" alt="Capture2323.png"/>
                   </div>
                   <div class="product1">
                     <p111>Project: In Progress</p111>
@@ -401,7 +401,7 @@
                
                   <div class="container1">
                      <div class="images">
-                       <img class="resize2" src="/images/wildfire.PNG" alt="wildfire.PNG"/>
+                       <img class="resize2" src="/images/wildfire.png" alt="wildfire.png"/>
                      </div>
                      <div class="product12">
                        <p111>OES</p111>
