--- a/MS/index.html
+++ b/MS/index.html
@@ -367,7 +367,7 @@
 
                <div class="container1">
                   <div class="images">
-                    <img class="resize" src="/images/Capture2323.png" alt=""/>
+                    <img class="resize" src="images/Capture2323.png" alt=""/>
                   </div>
                   <div class="product1">
                     <p111>Project: In Progress</p111>
@@ -401,7 +401,7 @@
                
                   <div class="container1">
                      <div class="images">
-                       <img class="resize2" src="/images/wildfire.png" alt=""/>
+                       <img class="resize2" src="images/wildfire.png" alt=""/>
                      </div>
                      <div class="product12">
                        <p111>OES</p111>
@@ -442,7 +442,7 @@
             
                            <div class="container1">
                               <div class="images">
-                                <img class="resize" src="/images/Seds.jpg" alt=""/>
+                                <img class="resize" src="images/Seds.jpg" alt=""/>
                               </div>
                               <div class="product1">
                                 <p111>SEDS</p111>
