--- a/MS/index.html
+++ b/MS/index.html
@@ -8,9 +8,9 @@
    ================================================== -->
    <meta charset="utf-8">
 	<title>Mindan Srisabaranjan</title>
-	<meta name="description" content="images/thumbn.jpg">
+	<meta name="description" content="">
 	<meta name="author" content="">
-
+   <meta name="image" property="og:image" content="images/thumbn.jpg">
    <!-- Mobile Specific Metas
    ================================================== -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
