--- a/MS/index.html
+++ b/MS/index.html
@@ -472,16 +472,16 @@
                      <div class="product12 subdesc2">
                        <p111>OES</p111>
                        <br>
-                       <h11><a1>Wildfire Hazard Tool</a1></h11>
+                       <h11><a1>Emergency Map</a1></h11>
                        <br>
                        <br>
                        <div id="theDiv2">
-                        <p111 class="desc1">A publically available evacuation map for the San Diego County. Aims to inform citizens if their neighborhood is in threat of a wildfire and shows them safety zones to reduce risk to nearby fires.</p111>
+                        <p111 class="desc1">A publically available evacuation map for the San Diego County. Aims to inform citizens if their neighborhood is in threat of a emergency and shows them safety zones to reduce risk to natural disasters.</p111>
                        </div>
                        <br>
                        <h21>QGIS &nbsp; &nbsp; &nbsp;Python &nbsp; &nbsp; &nbsp;ArcPro</h21>
                        <br> </br>
-                       <a href="https://www.readysandiego.org/content/oesready/en-us/wildfire-hazard-map.html" class="kickstarter"><i class="fas fa-link fa-2x"></i></a>
+                       <a href="https://www.readysandiego.org/content/oesready/en-us/maps.html" class="kickstarter"><i class="fas fa-link fa-2x"></i></a>
                        <!--<div class="buttons1">
                           <br>
                          <button class="add1">Add to Cart</button>
@@ -528,7 +528,7 @@
                                  <p111 class="desc1">  Aided in developing the static fire electronic control system to be able to monitor sensor data collected to see if the 3D printed rocket performed identical successfully to non-3D printed engines.</p111>
                                 </div>
                                 <br>
-                                <h21>Arduino &nbsp; &nbsp; &nbsp;C++ &nbsp; &nbsp; &nbsp;Python</h21>
+                                <h21>AutoCAD &nbsp; &nbsp; &nbsp;C++ &nbsp; &nbsp; &nbsp;Python</h21>
                                 <br> </br>
                                 <a href="https://www.kickstarter.com/projects/1054991011/vulcan-i-rocket-powered-by-3d-printed-engine" class="images"><i class="fas fa-link fa-2x"></i></a>
                                 <!--<div class="buttons1">
