--- a/MS/index.html
+++ b/MS/index.html
@@ -101,7 +101,7 @@
                <div class="columns download">
                   <p>
                      <br>
-                     <a href="images/Resume_MindanS.pdf" class="button" download><i class=""></i>Resume</a>
+                     <a href="images/Resume_Mindan.pdf" class="button" download><i class=""></i>Resume</a>
                   </p>
             </div>
                   <script>
