--- a/MS/index.html
+++ b/MS/index.html
@@ -206,7 +206,7 @@
    
                 <div class="five columns header-col">
    
-                  <img class="profile-pic"  src="images/google_Logo.png" alt="" />
+                  <img class="profile-pic"  src="images/google_Logo2.png" alt="" />
    
                 </div>
    
